.kube/base/rabbit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-master
  labels:
    app.kubernetes.io/name: rabbit-master
spec:
  selector:
    matchLabels:
      app: rabbit
      role: master
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbit
        role: master
    spec:
      containers:
      - name: master
        image: launcher.gcr.io/google/rabbitmq3
        ports:
          - name: rabbit-http
            protocol: TCP
            containerPort: 15672
          - name: rabbit-amqp
            protocol: TCP
            containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit-master
  labels:
    app.kubernetes.io/name: rabbit-master
spec:
  ports:
  - port: 15672
    targetPort: 15672
    name: rabbit-http
  - port: 5672
    name: rabbit-amqp
    targetPort: 5672
  selector:
    app: rabbit
    role: master
