.kube/base/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  labels:
    app.kubernetes.io/name: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-read-timeout: 300s
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite /api(.*) $1 break;
spec:
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /api
            backend:
              serviceName: api
              servicePort: http
